CMAKE_MINIMUM_REQUIRED ( VERSION 3.10 )

PROJECT ( "URLParser" )

SET ( GCC_COVERAGE_COMPILE_FLAGS "-g -coverage -fprofile-arcs -ftest-coverage" )
SET ( GCC_COVERAGE_LINK_FLAGS "-coverage -lgcov" )
SET ( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}" )
SET ( CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${GCC_COVERAGE_LINK_FLAGS}" )

SET ( CMAKE_BUILD_TYPE Debug )
SET ( CMAKE_VERBOSE_MAKEFILE false )

SET ( URLPARSER_OUTPUT "URLParser_example" )

SET ( URLPARSER_SRC_FILES
	example/example.cpp
	)

ADD_EXECUTABLE ( ${URLPARSER_OUTPUT} ${URLPARSER_SRC_FILES} )
